src/objects/PANG_Related_Country__c.object
<CustomObject>
    <description>Join object relating RWE Countries to RWE Projects and RWE Requests</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <referenceTo>PANG_Country__c</referenceTo>
        <relationshipLabel>Projects / Requests</relationshipLabel>
        <relationshipName>RWE_Request_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>PANG_Project__c</referenceTo>
        <relationshipLabel>Countries</relationshipLabel>
        <relationshipName>RWE_Related_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT( Country__r.Region__c )</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>PANG_Request__c</referenceTo>
        <relationshipLabel>Countries Supported by this RWE Request</relationshipLabel>
        <relationshipName>RWE_Request_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RWE Related Country</label>
    <nameField>
        <displayFormat>RWE-RC-{000000000}</displayFormat>
        <label>Related Country ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RWE Related Countries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>